13.1. Added hover effects to buttons and links. Fixed burger width on mobile phones. Fixed scroll in slider on Mozilla

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -6,16 +6,19 @@ $font-family2: "Raleway", sans-serif;
 
 $header-bg: #10101D;
 $logo: #42A9ED;
+$logo-hover: #3688c0;
 $link-hover-1: #43ABF0;
 $blue: #3E9CDC;
 $gray: #6F6D7B;
 $light-gray: #BBBBBB;
 $white: #fff;
+$white-gray: #d1d1d1;
 $light-black: #2A2B30;
 $orders-bg: #272733;
 $reviews-bg:rgb(49, 49, 55);
 $card-bg:rgb(70, 70, 72);
 $dark-blue: #286690;
+$dark-blue-2: #347fb2;
 $black: #000;
 $footer-bg: #3D4050;
 $gray-2: #C3C3C3;
